# peakshaving-analyzer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yml  init.sql  pyproject.toml
.github/workflows/: lint.yml  publish.yml
docker_configs/: grafana.ini
docker_configs/dashboard-definitions/: LPA.json  PSA.json
docker_configs/dashboards/: dashboards.yml
docker_configs/datasources/: datasource.yml
examples/storage_hourly_fixed_price/: config.yml  main.py
examples/storage_only/: config.yml  consumption.csv
examples/storage_only_dynamic_price/: config.yml  consumption.csv  main.py  price.csv
examples/storage_only_hourly_fixed_price/: config.yml  consumption.csv  main.py
examples/storage_only_quarterhourly_fixed_price/: config.yml  dev.ipynb  main.py
examples/storage_pv_hourly_dynamic_price/: config.yml  main.py  price.csv
examples/storage_quarterhourly_dynamic_price/: config.yml  main.py  price.csv
loadprofileanalyzer/: DBHandler.py  DatabaseHandler.py  LPA.py  __init__.py  config.py  config.yml  consumption.csv
peakshaving_analyzer/: DBHandler.py  PSA.py  TSA.py  __init__.py  common.py  config.py  config.yml  input.py  output.py
src/: loadprofile_analyzer.py
tests/: test_psa.py
tests/input/: test_brightsky_config.yml  test_existing_pv_config.yml  test_input.py
tests/input/data/: consumption.csv  existing_solar_gen.csv  price.csv
